--- a/package.json
+++ b/package.json
@@ -2,35 +2,42 @@
   "name": "react-global-cross-state",
   "version": "1.0.0",
   "description": "A simple atomic state library just to learn a bit on how Jotai worked and extending it on cross window apps, like some Electron apps might need",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "rollup -c && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MatheusBNAguiar/react-global-cross-state.git"
-  },
   "keywords": [
     "React",
     "Electron",
     "State"
   ],
-  "author": "Matheus Barreto Nunes de Aguiar",
-  "license": "ISC",
+  "homepage": "https://github.com/MatheusBNAguiar/react-global-cross-state#readme",
   "bugs": {
     "url": "https://github.com/MatheusBNAguiar/react-global-cross-state/issues"
   },
-  "homepage": "https://github.com/MatheusBNAguiar/react-global-cross-state#readme",
-  "devDependencies": {
-    "rollup": "^2.78.1",
-    "typescript": "^4.8.2",
-    "esbuild": "^0.14.38",
-    "rollup-plugin-dts": "^4.2.1",
-    "rollup-plugin-esbuild": "^4.9.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MatheusBNAguiar/react-global-cross-state.git"
   },
-  "dependencies": {
-    "typescript": "^4.6.4"
+  "license": "ISC",
+  "author": "Matheus Barreto Nunes de Aguiar",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "rollup -c && tsc",
+    "prepare": "husky install",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "esbuild": "^0.14.38",
+    "eslint": "^8.23.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "rollup": "^2.78.1",
+    "rollup-plugin-dts": "^4.2.1",
+    "rollup-plugin-esbuild": "^4.9.1",
+    "typescript": "^4.8.2"
   }
 }
