--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,6 @@
 {
-  "*.{js,jsx,ts,tsx}": "eslint --fix"
+  "*.{js,jsx,ts,tsx}": [
+    "eslint --cache --fix",
+    "prettier --write --ignore-unknown"
+  ]
 }
