--- a/package.json
+++ b/package.json
@@ -22,22 +22,27 @@
   "scripts": {
     "build": "rollup -c && tsc",
     "prepare": "husky install",
+    "lint:fix": "eslint ./ --fix",
+    "prettier": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "esbuild": "^0.14.38",
     "eslint": "^8.23.0",
-    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.6.3"
   }
 }
