--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "dependencies": {
     "nanoid": "^4.0.0",
-    "react": "^18.2.0",
+    "react": ">=16.8",
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "@types/react": "^18.0.17",
+    "@types/use-sync-external-store": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "esbuild": "^0.14.38",
@@ -49,5 +52,8 @@
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "react": ">=16.8"
   }
 }
