--- a/package.json
+++ b/package.json
@@ -24,20 +24,25 @@
     "lint:fix": "eslint ./ --fix",
     "prepare": "husky install",
     "prettier": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "nanoid": "^4.0.0",
-    "react": ">=16.8",
+    "react": ">=18.2",
+    "ts-node": "^10.9.1",
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/use-sync-external-store": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "esbuild": "^0.14.38",
+    "esbuild": "^0.15.5",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.0",
@@ -46,12 +51,16 @@
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "react-dom": "^18.2.0",
     "rollup": "^2.78.1",
-    "rollup-plugin-dts": "^4.2.1",
-    "rollup-plugin-esbuild": "^4.9.1",
-    "typescript": "^4.6.3"
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-esbuild": "^4.10.1",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.8.2"
   },
   "peerDependencies": {
     "react": ">=16.8"
